--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "html-loader": "^0.5.5",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "pre-commit": "^1.2.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "babel-cli": "^6.26.0"
-  }
+  },
+  "pre-commit": "build"
 }
